Revert "fixed overflow issue in the create post"
This reverts commit 99bcbc1706e20ce5f9a0443142f24a382901ca03.

--- a/src/components/Createpost.css
+++ b/src/components/Createpost.css
@@ -18,7 +18,6 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
-  width: fit-content;
 }
 
 #post-btn {
@@ -50,13 +49,12 @@
 }
 
 .details {
-  max-width: 450px;
   border-top: 1px solid rgb(173, 173, 173);
   padding-top: 10px;
 }
 
 textarea {
-  max-width: 90%;
+  width: 100%;
   border: none;
   outline: none;
   resize: vertical;
